<?xml version="1.0"?>
<package format="3">
  <name>can_interface</name>
  <version>0.0.0</version>
  <description>SocketCAN to ROS2 interface (C++)</description>
  <maintainer email="kiks@todo.todo">kiks</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>can_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
